# mvpy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  coverage.json  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh
.specify/templates/: plan-template.md  tasks-template.md
app/: config.py  main.py
app/api/: router.py
app/api/extra/: healthcheck.py
app/api/utils/enums/: __init__.py  auth.py  base.py  env_enum.py
app/api/v1/: __init__.py  dependencies.py  router.py
app/api/v1/controllers/: auth.py  items.py  roles.py  users.py
app/api/v1/schemas/: auth.py  item.py  roles.py  users.py
app/clients/: base.py
app/db/: base.py  session.py
app/db/crud/: base.py  blacklisted_tokens.py  roles.py  users.py
app/db/models/: __init__.py  blacklisted_token.py  role.py  user.py
app/schemas/: base.py
app/services/: auth_service.py  base.py  current_user_service.py  error_messages.py  role_service.py  token_service.py  user_service.py
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 2026_02_05_add_created_updated_at_to_users.py  2026_02_05_create_users_table.py  2026_02_06_add_blacklisted_tokens.py  2026_02_06_add_is_active_field_to_users.py  2026_02_07_add_role_model.py
specs/: README.md
specs/001-create-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  specify_prompt.md  tasks.md
specs/001-create-user/checklists/: requirements.md
specs/002-update-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-update-user/checklists/: requirements.md
specs/002-update-user/contracts/: update_user.yaml
specs/003-soft-delete-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-soft-delete-user/checklists/: requirements.md
specs/003-soft-delete-user/contracts/: openapi.yaml
specs/004-user-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-user-search/checklists/: requirements.md
specs/004-user-search/contracts/: api.md
specs/005-authenticate-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-authenticate-user/checklists/: requirements.md
specs/005-authenticate-user/contracts/: auth.http
specs/006-base-role-model/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-base-role-model/contracts/: roles.http
specs/spec_prompts/: constitution_promt.md  plan_prompt.md  specify_prompt.md  specify_prompt_example.md
tests/: conftest.py
tests/api/v1/: test_dependencies.py
tests/api/v1/controllers/: test_auth.py  test_roles.py  test_users.py
tests/services/: test_auth_service.py  test_role_service.py  test_user_service.py
